--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9596,7 +9596,7 @@ OnePlus:
 
 # Realme (sub brand Oppo)
 Realme:
-  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20[025-7]1|20[03]2|2027|2063|2072|2086|20[234]0|2185|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
+  regex: '(?:RMX(?:19(03|4[1235]|19|9[23]|2[157]|[01379]1)|20[025-7]1|20[03]2|2027|2063|2072|2086|20[234]0|218[059]|18(0[1579]|11|3[13]|2[157]|[45]1|45))|(?:OPPO[ _]?)?CPH1861)[ ;/)]'
   device: 'smartphone'
   models:
     - regex: '(?:OPPO[ _]?)?CPH1861[);/ ]'
@@ -9645,6 +9645,10 @@ Realme:
       model: 'C3'
     - regex: 'RMX2185[);/ ]'
       model: 'C11'
+    - regex: 'RMX2189[);/ ]'
+      model: 'C12'
+    - regex: 'RMX2180[);/ ]'
+      model: 'C15'
     - regex: 'RMX1831[);/ ]'
       model: 'U1'
     - regex: 'RMX2051[);/ ]'
@@ -13625,7 +13629,7 @@ POCO:
 
 # Xiaomi
 Xiaomi:
-  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2002J9E|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|HM NOTE 1(?:LTE|W)'
+  regex: 'Xiaomi(?!/(?:Miui|Mint[ ])Browser)|Mi9 Pro 5G|(?:MI [a-z0-9]+|Mi-4c|MI-One[ _]?[a-z0-9]+|MIX(?: 2S?)?)[);/ ]|HM (?:[^/;]+) (?:Build|MIUI)|(?:2014501|2014011|201481[12378]|201302[23]|2013061) Build|Redmi|MI_NOTE_Pro|POCOPHONE|(?:SHARK )?(KLE|MBU)-A0|SKR-[AH]0|SKW-[AH]0|POCO F1|DLT-[AH]0|MIBOX[234]([_ ]PRO)?|MiTV4[CSX]?|MiTV-(MSSP1|AXSO0)|AWM-A0|MI CC 9 Meitu Edition|MiBOX1S|MiTV4A|M2006C3LG|M2002J9E|HM2014819|WT88047|M2004J(?:7[AB]|19)C|M2003J15SC|HM NOTE 1(?:LTE|W)'
   device: 'smartphone'
   models:
     # specific smartphone models
@@ -13705,6 +13709,8 @@ Xiaomi:
       model: 'Redmi 10X'
     - regex: 'M2004J19C[);/ ]'
       model: 'Redmi 9'
+    - regex: 'M2006C3LG[);/ ]'
+      model: 'Redmi 9A'
     - regex: 'M2004J7BC[);/ ]'
       model: 'Redmi 10X Pro'
     - regex: 'Redmi K20 Pro[);/ ]'
@@ -16397,3 +16403,10 @@ iMars:
   regex: 'IMARS VEGA X7[);/ ]'
   device: 'smartphone'
   model: 'Vega X7'
+
+# Logic
+Logic:
+  regex: 'LOGIC_X5_LITE[);/ ]'
+  device: 'smartphone'
+  model: 'X5 Lite'
+
