--- a/regexes/device/mobiles.yml
+++ b/regexes/device/mobiles.yml
@@ -9568,10 +9568,10 @@ Onda:
 
 # OnePlus
 OnePlus:
-  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC2003|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[0135]|HD191[013]|HD190[01357]|HD1925|IN201[037]|IN202[03])(?: Build|\))'
+  regex: '(?:du_)?ONEPLUS|(?:A0001|A200[135]|AC200[13]|A300[03]|A3010|A5000|A600[03]|A601[03]|E100[135]|GM191[03517]|GM190[0135]|HD191[013]|HD190[01357]|HD1925|IN201[037]|IN202[03])(?: Build|\))'
   device: 'smartphone'
   models:
-    - regex: 'AC2003[);/ ]'
+    - regex: 'AC200[13][);/ ]'
       model: 'Nord 5G'
     - regex: 'IN202[03][);/ ]'
       model: '8 Pro'
@@ -13935,7 +13935,7 @@ Yezz:
 
 # Yu
 Yu:
-  regex: '(?:YU5[05]10[A]?|YU4711|AO5510|YU5050)[);/ ]'
+  regex: '(?:YU5[05]10[A]?|YU4711|AO5510|YU5050|YU5014)[);/ ]'
   device: 'smartphone'
   models:
     - regex: 'YU5010[A]?[);/ ]'
@@ -13948,6 +13948,10 @@ Yu:
       model: 'Yureka Plus'
     - regex: 'YU4711[);/ ]'
       model: 'Yunique'
+    - regex: 'YU4711[);/ ]'
+      model: 'Yunique'
+    - regex: 'YU5014[);/ ]'
+      model: 'Ace'
 
 # Yuandao
 Yuandao:
@@ -14581,7 +14585,7 @@ Zopo:
 
 # ZTE
 ZTE:
-  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609)[);/ ]'
+  regex: 'ZTE|AxonPhone|([a-z0-9]+)_USA_Cricket|(?:Blade (?:L110|L[2357]|L7A|S6|V[6789]|V8Q|V8 SE|V9 VITA|X7|A(310|460|465|475|520|530|602)|V580|V Ultra|Q Lux)|N9[15]8St|NX(?:403A|404H|406E|40[X2]|507J|503A|505J|506J|508J|510J|512J|511J|513J|521J|523J_V1|529J|531J|541J|5[48]9J|551J|563J|569[HJ]|573J|575J|59[157]J|60[1689]J|61[12679]J|62[79]J|659J|907J)|N818S|N951[0579]|N91[38]0|N9101|N913[267]|N952[01]|N9560|N9810|N799D|[UV]9180|[UV]9815|Z(?:233V|331|5031O|559DL|6621O|667T|768G|792|81[25]|818L|82[08]|83[12359]|85[125]|851M|(557|71[67]|798|836|861|916)BL|986DL|(232|718|828)TL|(?:233|353|558|717|799|837|862|899|917|963)VL|955A|95[678]|965|97[018]|98[1237]|986U|999|936L)|Apex2|G (LTE|Lux)|Vec|Z959|V865M|Z3001S|902ZT|KIS II Max|Kis 3|K3DX-V5G|Z930L|Optus X|Blade (A[35] 2019-T|A6 MAX|A0622)|Nubia Z(?:9|11)|Ctyon-A9|602ZT|MO-01J|Z963U|402ZT|P545|P609|dandelion)[);/ ]'
   device: 'smartphone'
   models:
     # explicit smartphone models
@@ -14907,6 +14911,8 @@ ZTE:
       model: 'ZMax Champ LTE'
     - regex: '(?:Z958|Z955A)[);/ ]'
       model: 'ZMax 2'
+    - regex: 'dandelion[);/ ]'
+      model: 'ZMax 3'
     - regex: 'Z963VL'
       model: 'Max Duo LTE'
     - regex: 'Z970'
@@ -16431,3 +16437,15 @@ Cloudfone:
   regex: 'Thrill Boost 3[);/ ]'
   device: 'smartphone'
   model: 'Thrill Boost 3'
+
+# Vsmart
+Vsmart:
+  regex: '(?:Joy 1\+|Active 1\+|Bee 3)[);/ ]'
+  device: 'smartphone'
+  models:
+    - regex: 'Joy 1\+[);/ ]'
+      model: 'Joy 1 Plus'
+    - regex: 'Active 1\+[);/ ]'
+      model: 'Active 1 Plus'
+    - regex: 'Bee 3[);/ ]'
+      model: 'Bee 3'
