--- a/Tests/Parser/Client/fixtures/mobile_app.yml
+++ b/Tests/Parser/Client/fixtures/mobile_app.yml
@@ -229,3 +229,9 @@
       name: Siri
       version: "1.0"
 
+-
+  user_agent: LinkedIn/9.7.1681 CFNetwork/808.1.4 Darwin/16.1.0
+  client:
+    type: mobile app
+    name: LinkedIn
+    version: "9.7.1681"
