--- a/Tests/fixtures/bots.yml
+++ b/Tests/fixtures/bots.yml
@@ -3780,5 +3780,12 @@
   bot:
     name: Serendeputy Bot
     category: Crawler
-    url: http://serendeputy.com/about/serendeputy-bot)
+    url: http://serendeputy.com/about/serendeputy-bot
+
+-
+  user_agent: ias-va/3.1 (+https://www.admantx.com/service-fetcher.html)
+  bot:
+    name: ADmantX Service Fetcher
+    category: Service bot
+    url: https://www.admantx.com/service-fetcher.html
 
