--- a/regexes/bots.yml
+++ b/regexes/bots.yml
@@ -2080,7 +2080,12 @@
 - regex: 'SerendeputyBot'
   name: 'Serendeputy Bot'
   category: 'Crawler'
-  url: 'http://serendeputy.com/about/serendeputy-bot)'
+  url: 'http://serendeputy.com/about/serendeputy-bot'
+
+- regex: 'ias-va.*admantx.*service-fetcher'
+  name: 'ADmantX Service Fetcher'
+  category: 'Service bot'
+  url: 'https://www.admantx.com/service-fetcher.html'
 
 # Generic detections
 
